--- a/notebooks/CH-01-PromptEngineering.ipynb
+++ b/notebooks/CH-01-PromptEngineering.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "gather": {
      "logged": 1686932813309
@@ -104,7 +104,18 @@
      }
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import openai\n",
     "import os\n",
@@ -115,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "gather": {
      "logged": 1686933122347
@@ -208,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "gather": {
      "logged": 1686938673045
@@ -239,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "gather": {
      "logged": 1686938550664
@@ -282,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "gather": {
      "logged": 1686938676516
@@ -297,7 +308,15 @@
      }
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Why did the tomato turn red? Because it saw the salad dressing!\n"
+     ]
+    }
+   ],
    "source": [
     "messages =  f\"\"\"\n",
     "tell me a joke.\n",
@@ -308,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "gather": {
      "logged": 1686938564787
@@ -323,7 +342,15 @@
      }
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "To get to the other side!\n"
+     ]
+    }
+   ],
    "source": [
     "messages =  [      \n",
     "    {'role':'user', 'content':'tell me a joke'},   \n",
@@ -354,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false,
@@ -366,9 +393,76 @@
      }
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "¿Por qué los tomates se ruborizan? Porque ven la ensalada desnuda.  ¿Te ha hecho reír?\n"
+     ]
+    }
+   ],
    "source": [
-    "# Prueba aquí la función de completación para una temperatura muy alta entre (0,1)"
+    "# Prueba aquí la función de completación para una temperatura muy alta entre (0,1)\n",
+    "def get_chat_completion(prompt, model=chat_model):\n",
+    "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
+    "    response = openai.ChatCompletion.create(\n",
+    "        engine=model,\n",
+    "        messages=messages,\n",
+    "        temperature=0.8, # this is the degree of randomness of the model's output\n",
+    "        max_tokens = 200,\n",
+    "        top_p = 1.0\n",
+    "    )\n",
+    "    return response.choices[0].message[\"content\"]\n",
+    "\n",
+    "messages =  f\"\"\"\n",
+    "dime una broma.\n",
+    "\"\"\"\n",
+    "response = get_chat_completion(messages)\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "jupyter": {
+     "outputs_hidden": false,
+     "source_hidden": false
+    },
+    "nteract": {
+     "transient": {
+      "deleting": false
+     }
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "¿Por qué los pájaros vuelan hacia\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Prueba aquí la función de completación para un valor max_tokens muy bajo para obtener respuestas más cortas\n",
+    "def get_chat_completion(prompt, model=chat_model):\n",
+    "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
+    "    response = openai.ChatCompletion.create(\n",
+    "        engine=model,\n",
+    "        messages=messages,\n",
+    "        temperature=0, # this is the degree of randomness of the model's output\n",
+    "        max_tokens = 10,\n",
+    "        top_p = 1.0\n",
+    "    )\n",
+    "    return response.choices[0].message[\"content\"]\n",
+    "\n",
+    "messages =  f\"\"\"\n",
+    "dime una broma.\n",
+    "\"\"\"\n",
+    "response = get_chat_completion(messages)\n",
+    "print(response)"
    ]
   },
   {
@@ -387,26 +481,23 @@
    },
    "outputs": [],
    "source": [
-    "# Prueba aquí la función de completación para un valor max_tokens muy bajo para obtener respuestas más cortas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "outputs_hidden": false,
-     "source_hidden": false
-    },
-    "nteract": {
-     "transient": {
-      "deleting": false
-     }
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Prueba aquí las funciones de completación con 2 valores diferentes de penalización por diversidad entre (0,2)."
+    "# Prueba aquí las funciones de completación con 2 valores diferentes de penalización por diversidad entre (0,2).\n",
+    "def get_chat_completion(prompt, model=chat_model):\n",
+    "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
+    "    response = openai.ChatCompletion.create(\n",
+    "        engine=model,\n",
+    "        messages=messages,\n",
+    "        temperature=0, # this is the degree of randomness of the model's output\n",
+    "        max_tokens = 200,\n",
+    "        top_p = 1.0\n",
+    "    )\n",
+    "    return response.choices[0].message[\"content\"]\n",
+    "\n",
+    "messages =  f\"\"\"\n",
+    "dime una broma.\n",
+    "\"\"\"\n",
+    "response = get_chat_completion(messages)\n",
+    "print(response)"
    ]
   },
   {
@@ -1877,7 +1968,7 @@
    "name": "python38-azureml"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1891,7 +1982,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.1"
   },
   "microsoft": {
    "host": {
