--- a/notebooks/CH-01-PromptEngineering.ipynb
+++ b/notebooks/CH-01-PromptEngineering.ipynb
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false,
@@ -479,25 +479,43 @@
      }
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Respuesta con fre_p=0.1: ¿Por qué los pájaros vuelan hacia el sur en invierno? Porque es demasiado lejos para caminar.\n",
+      "\n",
+      "Respuesta con fre_p=1.5: ¿Sabías que los ladrones se han vuelto más sofisticados?\n",
+      "Ahora roban información y la venden en línea.\n",
+      "Es decir, son hackers...\n",
+      "¡Hackers, jaque mate!\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Prueba aquí las funciones de completación con 2 valores diferentes de penalización por diversidad entre (0,2).\n",
-    "def get_chat_completion(prompt, model=chat_model):\n",
+    "def get_chat_completion(prompt, model=chat_model, fre_p=2.0):\n",
     "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
     "    response = openai.ChatCompletion.create(\n",
     "        engine=model,\n",
     "        messages=messages,\n",
-    "        temperature=0, # this is the degree of randomness of the model's output\n",
-    "        max_tokens = 200,\n",
-    "        top_p = 1.0\n",
+    "        temperature=1,  # Grado de aleatoriedad\n",
+    "        max_tokens=200,\n",
+    "        frequency_penalty = fre_p\n",
     "    )\n",
     "    return response.choices[0].message[\"content\"]\n",
     "\n",
-    "messages =  f\"\"\"\n",
-    "dime una broma.\n",
-    "\"\"\"\n",
-    "response = get_chat_completion(messages)\n",
-    "print(response)"
+    "# Mensaje para la función\n",
+    "messages = \"Dime una broma.\"\n",
+    "\n",
+    "# Probar con diferentes valores de fre_p\n",
+    "fre_p_values = [0.1, 1.5]\n",
+    "\n",
+    "for value in fre_p_values:\n",
+    "    response = get_chat_completion(messages, fre_p=value)\n",
+    "    print(f\"Respuesta con fre_p={value}: {response}\\n\")"
    ]
   },
   {
