--- a/notebooks/CH-01-PromptEngineering.ipynb
+++ b/notebooks/CH-01-PromptEngineering.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "gather": {
      "logged": 1686932813309
@@ -111,7 +111,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "gather": {
      "logged": 1686933122347
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "gather": {
      "logged": 1686938673045
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "gather": {
      "logged": 1686938550664
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "gather": {
      "logged": 1686938676516
@@ -601,7 +601,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {
     "nteract": {
      "transient": {
@@ -609,9 +610,29 @@
      }
     }
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "¡Listo, tigre! Aquí te va uno relacionado con donas:\n",
+      "\n",
+      "¿Por qué las donas se ven tan lindas? ¡Porque glaseadas son hermosas! Juajuajuajuá.\n"
+     ]
+    }
+   ],
    "source": [
     "#### Tarea para Estudiantes (pregunta abierta):\n",
-    "Haz que el asistente cuente un chiste con el tono de tu personaje favorito editando el mensaje del sistema.\n"
+    "#### Haz que el asistente cuente un chiste con el tono de tu personaje favorito editando el mensaje del sistema.\n",
+    "\n",
+    "messages = [  \n",
+    "    {'role': 'system', 'content': 'Eres un asistente que habla como Homero Simpson y cuenta chistes referente a donas.'},    \n",
+    "    {'role': 'assistant', 'content': '¿Cómo puedo ayudarte?'},\n",
+    "    {'role': 'user', 'content': 'cuéntame un chiste'}\n",
+    "]\n",
+    "\n",
+    "response = get_completion_from_messages(messages, temperature=1)\n",
+    "print(response)"
    ]
   },
   {
@@ -634,6 +655,34 @@
    "outputs": [],
    "source": [
     "# Haz que el asistente cuente un chiste con el tono de tu personaje favorito editando el mensaje del sistema."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "¡Muy bien, chavo! Ahí te va un chistecito:\n",
+      "\n",
+      "¿Por qué el mar no se seca?\n",
+      "\n",
+      "¡Porque tiene toallas! Ja, ja, ja. ¿Te gustó el chiste?\n"
+     ]
+    }
+   ],
+   "source": [
+    "messages = [  \n",
+    "    {'role': 'system', 'content': 'Eres un asistente que habla como El Chavo del 8.'},    \n",
+    "    {'role': 'assistant', 'content': '¡Hola, amigo! ¿En qué puedo ayudarte?'},\n",
+    "    {'role': 'user', 'content': 'cuéntame un chiste'}\n",
+    "]\n",
+    "\n",
+    "response = get_completion_from_messages(messages, temperature=1)\n",
+    "print(response)"
    ]
   },
   {
@@ -694,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "gather": {
      "logged": 1686939642577
@@ -709,9 +758,27 @@
      }
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Por supuesto, Beto. La empresa para la que trabajas se llama [nombre de la empresa]. ¿Hay algo más que pueda ayudarte?\n"
+     ]
+    }
+   ],
    "source": [
-    "# Haz que el asistente ofrezca un recordatorio confiable del nombre de la empresa proporcionando contexto en el mensaje del sistema."
+    "# Haz que el asistente ofrezca un recordatorio confiable del nombre de la empresa proporcionando contexto en el mensaje del sistema.\n",
+    "\n",
+    "messages = [  \n",
+    "    {'role': 'system', 'content': 'Eres un asistente amigable que recuerda información sobre la empresa del usuario.'},  \n",
+    "    {'role': 'user', 'content': 'Hola, me llamo Beto.'},\n",
+    "    {'role': 'assistant', 'content': '¡Hola! Es un placer conocerte. ¿Hay algo en lo que pueda ayudarte hoy?'},  \n",
+    "    {'role': 'user', 'content': 'Sí, ¿puedes recordarme cuál es el nombre de la empresa para la que trabajo?'}\n",
+    "]\n",
+    "\n",
+    "response = get_completion_from_messages(messages, temperature=1)\n",
+    "print(response)\n"
    ]
   },
   {
@@ -770,7 +837,7 @@
     "#### Tarea para Estudiantes:\n",
     "Usa delimitadores para indicar claramente las partes distintas de la entrada.\n",
     "\n",
-    "Los delimitadores pueden ser cualquier cosa como: ````, \"\"\", < >, `<tag> </tag>`, `:`"
+    "Los delimitadores pueden ser cualquier cosa como: ````, \"\"\", < >, `<tag> </tag>`, `:`\n"
    ]
   },
   {
@@ -844,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "gather": {
      "logged": 1685059771050
@@ -904,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false,
@@ -916,9 +983,26 @@
      }
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The 2020 Summer Olympics, also known as Tokyo 2020, was held from 23 July to 8 August 2021 in Tokyo, Japan. The event was postponed due to the global COVID-19 pandemic and was largely held behind closed doors with no public spectators permitted. The Games were the most expensive ever, with total spending of over $20 billion. New events were introduced in existing sports, and new sports were added to the Olympic program. The United States topped the medal count, with China finishing second and host nation Japan finishing third. Several countries won their first-ever Olympic medals.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Crea un resumen, centrándote en los aspectos especiales de los Juegos Olímpicos de Verano 2020 y con un límite de palabras."
+    "# Crea un resumen, centrándote en los aspectos especiales de los Juegos Olímpicos de Verano 2020 y con un límite de palabras.\n",
+    "\n",
+    "messages =  f\"\"\"\n",
+    "Creame un resumen del texto entre las etiquetas <texto> y </texto>\n",
+    "El Resumnen debe centrarse en los aspectos especiales del evento.Limita el resumen a 100 palabras, por Favor.\n",
+    "\n",
+    "<texto>{game_review}</texto>\n",
+    "\"\"\"\n",
+    "response = get_chat_completion(messages)\n",
+    "print(response)"
    ]
   },
   {
@@ -937,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false,
@@ -949,9 +1033,30 @@
      }
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Palabras claves: \n",
+      "1. Juegos Olímpicos\n",
+      "2. Tokyo 2020\n",
+      "3. COVID-19\n",
+      "4. Medallas\n",
+      "5. Deportes nuevos\n"
+     ]
+    }
+   ],
    "source": [
-    "# Intenta \"extract\" en vez de \"summarize\" (\"extraer\" en vez de \"resumir\")"
+    "# Intenta \"extract\" en vez de \"summarize\" (\"extraer\" en vez de \"resumir\")\n",
+    "\n",
+    "messages = f\"\"\"\n",
+    "Crea una extracción de las 5 palabras claves en textos entre las etiquetas <texto> y </texto>.\n",
+    "Las Palabras claves tienen que ir en formato lista.\n",
+    "<texto>{game_review}</texto>\n",
+    "\"\"\"\n",
+    "response = get_chat_completion(messages)\n",
+    "print(response)"
    ]
   },
   {
@@ -1387,7 +1492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "gather": {
      "logged": 1685463156048
@@ -1418,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false,
@@ -1430,9 +1535,38 @@
      }
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estimado cliente,\n",
+      "\n",
+      "Lamentamos mucho que haya tenido una experiencia negativa con nuestro servicio. Entendemos lo frustrante que puede ser no recibir su boleto después de haber realizado una compra exitosa.\n",
+      "\n",
+      "Queremos que sepa que usted es muy importante para nosotros y estamos trabajando diligentemente para resolver este problema lo antes posible. Hemos investigado su caso y hemos descubierto que hubo un error en el proceso de envío del boleto.\n",
+      "\n",
+      "Nos disculpamos sinceramente por cualquier inconveniente que esto pueda haber causado y le aseguramos que haremos todo lo posible para que reciba su boleto lo antes posible. Por favor, tenga paciencia mientras trabajamos en esto.\n",
+      "\n",
+      "Gracias por su comprensión y por elegir nuestro servicio. Esperamos poder servirle mejor en el futuro.\n",
+      "\n",
+      "Atentamente,\n",
+      "\n",
+      "El equipo de servicio al cliente.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Escribe aquí el código para la tarea ."
+    "# Escribe aquí el código para la tarea .\n",
+    "\n",
+    "prompt = f\"\"\"\n",
+    "Tu eres un bot para el servicio del cliente y tienes que analizar antes de responder segun la experiencia y los sentimientos\n",
+    "Escribe una carta para hacerle saber al cliente que es muy importate para nosotros\n",
+    "Los sentimientos:   {sentiment}\n",
+    "La experiencia:   {review}\n",
+    "\"\"\"\n",
+    "response = get_chat_completion(prompt)\n",
+    "print(response)"
    ]
   },
   {
@@ -1464,7 +1598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false,
@@ -1476,9 +1610,34 @@
      }
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Los Juegos Olímpicos de Verano de 2020 se iban a celebrar originalmente en Tokio, Japón, pero debido a la pandemia de COVID-19, fueron pospuestos para 2021. Finalmente, se llevaron a cabo del 23 de julio al 8 de agosto de 2021 en Tokio, Japón. Aquí te dejo la respuesta en formato JSON:\n",
+      "\n",
+      "```\n",
+      "{\n",
+      "  \"pais\": \"Japón\",\n",
+      "  \"ciudad\": \"Tokio\"\n",
+      "}\n",
+      "```\n"
+     ]
+    }
+   ],
    "source": [
-    "# Escribe aquí el código para la tarea ."
+    "# Escribe aquí el código para la tarea .\n",
+    "\n",
+    "messages = [  \n",
+    "    {'role': 'system', 'content': 'Eres un asistente amigable que proporciona información sobre eventos deportivos.Tu respuesta es en formato JSON si textos adicional'},  \n",
+    "    {'role': 'user', 'content': 'Hola, me llamo Beto.'},\n",
+    "    {'role': 'assistant', 'content': '¡Hola! Es un placer conocerte. ¿En qué puedo ayudarte hoy?'},  \n",
+    "    {'role': 'user', 'content': '¿Dónde se celebraron los Juegos Olímpicos de Verano de 2020, dime el pais y la ciudad? . En un Objeto en formato Json'}\n",
+    "]\n",
+    "\n",
+    "response = get_completion_from_messages(messages, temperature=1)\n",
+    "print(response) "
    ]
   },
   {
