Actualizo el archivo CH-01

--- a/notebooks/CH-01-PromptEngineering.ipynb
+++ b/notebooks/CH-01-PromptEngineering.ipynb
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {
     "gather": {
      "logged": 1686939642577
@@ -763,7 +763,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Por supuesto, Beto. La empresa para la que trabajas se llama [nombre de la empresa]. ¿Hay algo más que pueda ayudarte?\n"
+      "Por supuesto Beto, trabajas para Código Facilito, una empresa dedicada a la creación de contenido educativo sobre programación, diseño, tecnología y negocios en línea. ¿Te gustaría saber algo más sobre la empresa?\n"
      ]
     }
    ],
@@ -771,7 +771,7 @@
     "# Haz que el asistente ofrezca un recordatorio confiable del nombre de la empresa proporcionando contexto en el mensaje del sistema.\n",
     "\n",
     "messages = [  \n",
-    "    {'role': 'system', 'content': 'Eres un asistente amigable que recuerda información sobre la empresa del usuario.'},  \n",
+    "    {'role': 'system', 'content': 'Eres un asistente amigable que recuerda información sobre la empresa del usuario.Tu trabajas para Codigo Facilito'},  \n",
     "    {'role': 'user', 'content': 'Hola, me llamo Beto.'},\n",
     "    {'role': 'assistant', 'content': '¡Hola! Es un placer conocerte. ¿Hay algo en lo que pueda ayudarte hoy?'},  \n",
     "    {'role': 'user', 'content': 'Sí, ¿puedes recordarme cuál es el nombre de la empresa para la que trabajo?'}\n",
