Se termino el Reto 01 - CH-01

--- a/notebooks/CH-01-PromptEngineering.ipynb
+++ b/notebooks/CH-01-PromptEngineering.ipynb
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "gather": {
      "logged": 1686938676516
@@ -2111,7 +2111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false,
@@ -2123,9 +2123,54 @@
      }
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"Estados Unidos\": {\n",
+      "    \"medallas de oro\": 39,\n",
+      "    \"medallas totales\": 113\n",
+      "  },\n",
+      "  \"China\": {\n",
+      "    \"medallas de oro\": 38,\n",
+      "    \"medallas totales\": 89\n",
+      "  },\n",
+      "  \"Japón\": {\n",
+      "    \"medallas de oro\": 27,\n",
+      "    \"medallas totales\": 58\n",
+      "  }\n",
+      "}\n",
+      "Los Juegos Olímpicos son un evento deportivo mundial que reúne a los mejores atletas de todo el mundo para competir en diferentes disciplinas. Cada país tiene como objetivo ganar medallas y ser reconocido como uno de los mejores en el mundo del deporte. En los Juegos Olímpicos de Tokio 2021, Estados Unidos, China y Japón fueron los países que más medallas ganaron.\n",
+      "\n",
+      "Estados Unidos lideró la tabla de medallas con un total de 113 medallas, de las cuales 39 fueron de oro. Los Estados Unidos tuvieron un gran desempeño en deportes como la natación, el atletismo y el baloncesto, lo que les permitió obtener una gran cantidad de medallas. Los Estados Unidos son conocidos por ser una potencia deportiva y su desempeño en los Juegos Olímpicos de Tokio 2021 no\n",
+      "\"Estados Unidos lidera medallero olímpico\"\n"
+     ]
+    }
+   ],
    "source": [
-    "# Escribe aquí el código para la tarea ."
+    "# Escribe aquí el código para la tarea .\n",
+    "prompt1 = f\"\"\"\n",
+    "    Basado en el contexto a continuación, escribe un objeto JSON que contenga el número de medallas de oro y totales para cada país.\n",
+    "    Contexto: El evento fue celebrado del 23 de julio al 8 de agosto de 2021 en Tokio, Japón. Los Estados Unidos lideraron el conteo de medallas con 39 oros y un total de 113 medallas. China ocupó el segundo lugar con 38 oros y un total de 89 medallas. Japón terminó tercero con 27 oros y un total de 58 medallas.\n",
+    "\"\"\"\n",
+    "num_medals_dict = get_chat_completion(prompt1)\n",
+    "\n",
+    "prompt2 = f\"\"\"\n",
+    "    Utiliza el siguiente objeto JSON para escribir un breve artículo sobre los ganadores y perdedores de los Juegos Olímpicos basado en el conteo de medallas:\n",
+    "    {num_medals_dict}\n",
+    "\"\"\"\n",
+    "summary = get_chat_completion(prompt2)\n",
+    "\n",
+    "prompt3 = f\"\"\"\n",
+    "    Genera un título para el resumen del artículo en 5 palabras:\n",
+    "    {summary}\n",
+    "\"\"\"\n",
+    "title = get_chat_completion(prompt3)\n",
+    "print(num_medals_dict)\n",
+    "print(summary)\n",
+    "print(title)"
    ]
   },
   {
