--- a/notebooks/CH-03-A-Grounding.ipynb
+++ b/notebooks/CH-03-A-Grounding.ipynb
@@ -35,9 +35,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import openai\n",
     "import os\n",
@@ -58,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,15 +164,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Response: Tabla de ganadores del torneo de tenis de Wimbledon 2023:\n",
+      "\n",
+      "Categoría | Ganador/a | Finalista\n",
+      "--- | --- | ---\n",
+      "Individuales masculinos | Carlos Alcaraz | Novak Djokovic\n",
+      "Individuales femeninos | Markéta Vondroušová | Ons Jabeur\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
+    "context = f\"\"\"\n",
+    "El torneo de Wimbledon de 2023 fue un campeonato de tenis que se disputó entre el 3 al 16 de julio del 2023, en las pistas de hierba del All England Lawn Tennis and Croquet Club, ubicado en Wimbledon (Reino Unido). Fue la 136.ª edición del campeonato y el tercer torneo de Grand Slam del año, cuyas preliminares se jugaron entre el 26 al 29 de junio del presente año.\n",
+    "Fue el primer torneo que se llevó a cabo bajo el reinado de Carlos III del Reino Unido.\n",
+    "\n",
+    "Además contó con la vuelta de los campeones defensores en individuales masculinos y femeninos, Novak Djokovic y Elena Rybakina, respectivamente.\n",
+    "\n",
+    "Este torneo fue el último en la carrera profesional de Anett Kontaveit, quien se retiró prematuramente del tenis a los 27 años debido a una hernia discal lumbar en su espalda. La ex número 2 del mundo disputó su último partido en la segunda ronda ante Marie Bouzková.\n",
+    "\n",
+    "Carlos Alcaraz en individuales masculinos y Markéta Vondroušová, en individuales femeninos respectivamente, se proclamaron campeones, el primero derroto al serbio Novak Djokovic, asegurando el N°1 del mundo y por si rompiendo 20 años de dominio que tuvieron el Big Four (el derrotado Djokovic, el español Rafael Nadal, el suizo Roger Federer y el escocés Andy Murray-alternados-, comenzado en el 2003, cuando el tercero, derrotara al australiano Mark Philippoussis), mientras que la segunda, derroto a la tunecina Ons Jabeur, proclamándose campeona y por si la tercera tenista mujer de origen checo en conseguir el trofeo, tras Martina Navratilova y Petra Kvitova.\"\"\"\n",
+    "\n",
     "prompt = f\"\"\"\n",
-    "Enter Question Here\n",
+    "Quiero saber quien gano el toneo de tenis de Wimbledon en 2023 en las categorias individuales masculinos y femeninos en formato de una tabla  ordenada.\n",
+    "\n",
+    "Este es el contexto: {context}\n",
     "\"\"\"\n",
     "\n",
     "model_response = get_chat_completion(prompt, model=model)\n",
+    "\n",
     "print(f\"Response: {model_response}\\n\")"
    ]
   },
@@ -187,7 +225,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -201,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.1"
   },
   "orig_nbformat": 4
  },
